istio/peerauthentications.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: apps-mtls
  namespace: default
spec:
  mtls:
    mode: STRICT
