istio/virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webapp1-vs
  namespace: webapp1
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/apps-gateway
  http:
    - match:
        - uri:
            exact: /webapp1
        - uri:
            prefix: /webapp1/
      rewrite:
        uri: /
      route:
        - destination:
            host: webapp1.webapp1.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webapp2-vs
  namespace: webapp2
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/apps-gateway
  http:
    - match:
        - uri:
            exact: /webapp2
        - uri:
            prefix: /webapp2/
      rewrite:
        uri: /
      route:
        - destination:
            host: webapp2.webapp2.svc.cluster.local
            port:
              number: 80
